[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ghostpixxells_pixelfood/71_nacho.png" type="Texture" id=1]
[ext_resource path="res://Objects/COMIDA.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 14.5 )

[node name="Node2D" type="Area2D"]
script = ExtResource( 2 )

[node name="71Nacho" type="Sprite" parent="."]
position = Vector2( 3, 1.5 )
scale = Vector2( 2, 1.90625 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Node2D_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Node2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Node2D_mouse_exited"]
